--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "server.js",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.15",
-    "dotenv": "^10.0.0"
+    "nodemon": "^2.0.9"
   },
   "devDependencies": {},
   "scripts": {
